# YOLOv5-LPRNet-Licence-Recognition

./: .gitignore  conf.py  pyproject.toml  tutorials.md
data/: ccpd.yaml
dataset_utils/: README.md  dateset.py  split.py
scripts/: train.sh  train_lprnet.sh  train_yolo.sh
tools/: train_lprnet.py
utils/: utils.py
