[project]
name = "yolov5-lprnet-licence-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "numpy>=1.18.5",
    "matplotlib>=3.2.2",
    "numpy>=1.18.5,<1.20",
    "opencv-python>=4.1.2",
    "Pillow>=7.1.2,<10",
    "PyYAML>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "tqdm>=4.41.0",
    "tensorboard>=2.4.1",
    "pandas>=1.1.4",
    "seaborn>=0.11.0",
    "imutils>=0.5.4",
    'setuptools==59.5.0',
]

[project.optional-dependencies]
cpu = ["torch>=1.7.0", "torchvision>=0.8.1"]
# uv 有特么的毛病手动装一下 uv pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu113
cu113 = ["torch>=1.7.0", "torchvision>=0.8.1"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu113" }]]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu113", extra = "cu113" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu113", extra = "cu113" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
explicit = true
